<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project2_reactive</name>
  <version>0.0.1</version>
  <description>
    CS 4023 Project 2 – Reactive Robotics using ROS 2 and TurtleBot 4.
    Implements priority-based reactive behaviors: Halt, Keyboard, Escape,
    Avoid, Turn, and Drive.
  </description>
  <maintainer email="riley.gillon@ou.edu">Riley</maintainer>
  <license>MIT</license>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>irobot_create_msgs</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
