<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project2_reactive</name>
  <version>0.0.1</version>
  <description>
    CS 4023 Project 2 – Reactive Robotics using ROS 2 and TurtleBot 4.
    Implements priority-based reactive behaviors: Halt, Keyboard, Escape,
    Avoid, Turn, and Drive.
  </description>
  <maintainer email="riley.gillon@ou.edu">Riley</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>irobot_create_msgs</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- Test dependencies -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
